--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,11 @@ services:
     image: theteamaker/mio
     environment:
       - TOKEN=<secret>
+      - PREFIX="mio "
+      - SQL_DATABASE="sqlite:///data/database.db"
+    volumes:
+      - mio_data:/app/data
+
+volumes:
+  mio_data:
+    external: true
