--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
 aiohttp==3.5.4
+alembic==1.3.2
+astroid==2.3.3
 async-timeout==3.0.1
 attrs==19.3.0
 chardet==3.0.4
+dataset==1.1.2
 discord==1.0.1
 discord.py==1.2.5
 idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.3
+Mako==1.1.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
 multidict==4.7.2
+pylint==2.4.4
+python-dateutil==2.8.1
 python-dotenv==0.10.3
+python-editor==1.0.4
+six==1.13.0
+SQLAlchemy==1.3.12
 websockets==6.0
+wrapt==1.11.2
 yarl==1.4.2
