fixed env variable issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     image: theteamaker/mio
     environment:
       - TOKEN=<secret>
-      - PREFIX="mio "
-      - SQL_DATABASE="sqlite:///data/database.db"
+      - SQL_DATABASE=sqlite:///data/database.db
     volumes:
       - mio_data:/app/data
 
